syntax = "proto3";

package product;

option go_package = "github.com/meokg456/ecommerce/proto/product";

import "google/protobuf/struct.proto";

message Product {
    string id = 1;
    string title = 2;
    string descriptions = 3;
    string category = 4;
    repeated string images = 5;
    google.protobuf.Struct additionInfo = 6;
    int64 merchantId = 7;
}